--- a/Trabalho 1/Relatorio/sbc-template.tex
+++ b/Trabalho 1/Relatorio/sbc-template.tex
@@ -70,6 +70,7 @@ Todas as operações requisitadas são resolvidas pelo programa então pode-se c
 \item Tratamento para números em ponto flutuante, aceitando tanto inteiros quanto números reais e tratando os dois da mesma forma (como ponto flutuante) através da mesma conversão;
 \item Tratamento de ordem de operandos e operações, não prosseguindo para a resolução da expressão se possuir algum elemento fora da ordem esperada;
 \item Trata espaços em branco como divisão entre elementos na escrita da expressão;
+\item Trata precedência de operações, resolvendo primeiramente as funções enquanto cria a lista, multiplicação e divisão, e por fim soma e subtração.
 \item Soma de dois números reais;
 \item Subtração de dois números reais;
 \item Divisão de dois números reais;
