--- a/Trabalho 1/Relatorio/sbc-template.tex
+++ b/Trabalho 1/Relatorio/sbc-template.tex
@@ -106,7 +106,10 @@ Da mesma forma pode-se listar as limitações as expressões não aceitas pelo p
 \end{figure}
 
 \item Ainda devido a questão deste trabalho não necessitar trabalhar com parênteses, a precedência das operações só depende da sua precedência natural (multiplicação e divisão antes de soma e subtração) e a ordem de aparência na expressão;
-\item A expressão deve possui um tamanho máximo de 200 caracteres.
+
+\item A expressão deve possui um tamanho máximo de 200 caracteres;
+
+\item Não aceita valores compostos dentro de funções, por exemplo seno(10+11) ou raiz(25-9).
 \end{enumerate}
 
 \section*{Conclusão}
