Alterado tamanho das figuras

--- a/Trabalho 1/Relatorio/sbc-template.tex
+++ b/Trabalho 1/Relatorio/sbc-template.tex
@@ -22,7 +22,7 @@
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.5\textwidth]{Imagens/logo.png}
+\includegraphics[width=\textwidth]{Imagens/logo.png}
 \end{figure}
 
 
@@ -91,7 +91,7 @@ Da mesma forma pode-se listar as limitações as expressões não aceitas pelo p
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.5\textwidth]{Imagens/erro_parenteses.png}
+\includegraphics[width=\textwidth]{Imagens/erro_parenteses.png}
 \caption{Erros Parenteses}
 \label{fig:erro_parenteses}
 \end{figure}
@@ -100,7 +100,7 @@ Da mesma forma pode-se listar as limitações as expressões não aceitas pelo p
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.5\textwidth]{Imagens/dois_menos.png}
+\includegraphics[width=\textwidth]{Imagens/dois_menos.png}
 \caption{Tratamento para subtração de número negativo}
 \label{fig:menos}
 \end{figure}
@@ -120,7 +120,7 @@ Através da criação da divisão de tarefas em procedimentos como de leitura da
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.5\textwidth]{Imagens/resultado.png}
+\includegraphics[width=\textwidth]{Imagens/resultado.png}
 \caption{Resultado de uma expressão}
 \label{fig:resultado}
 \end{figure}
